# envelockserver

./: .env.example  .gitignore  ENV_SETUP.md  README.md  alembic.ini  docker-compose.yml  envelock.db  pyproject.toml  smoke.db
migrations/: env.py  script.py.mako
migrations/versions/: 9f9ed2127394_initial_schema.py  b2c3d4e5f601_row_level_security.py
src/envelock/: config.py  db.py  main.py  models.py  types.py
src/envelock/api/: auth.py  billing.py  channels.py  governance.py  health.py  tenants.py  v1.py
src/envelock/auth/: deps.py  security.py
src/envelock/billing/: payments.py  pricing.py  trial.py
src/envelock/channels/mail/: broker.py  ingest.py  oauth.py  parser.py  providers.py
src/envelock/connect/: advisor.py  lookup.py
src/envelock/core/: capabilities.py  enums.py  events.py
src/envelock/detections/: __init__.py  base.py  cascade.py  content.py  identity.py  impersonation.py  sessions.py
src/envelock/governance/: export.py  quality.py  retention.py
src/envelock/notify/: dispatch.py  ladder.py  senders.py
src/envelock/platform/: alerts.py  graph.py  graph_store.py  pipeline.py  remediation.py
src/envelock/risk/: engine.py
src/envelock/security/: crypto.py  limits.py  middleware.py
src/envelock/util/: domains.py  payments.py
src/envelock/workers/: watchers.py
tests/: conftest.py  test_api.py  test_auth_hardening.py  test_billing.py  test_capabilities.py  test_channels.py  test_detections.py  test_governance.py  test_integration.py  test_notify_graph.py  test_oauth.py  test_payments.py  test_pipeline.py  test_ratelimit.py  test_security.py  test_worldclass.py
