[project]
name = "envelock-server"
version = "0.1.0"
description = "Envelock — email fraud and account-takeover protection"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "redis>=5.2",
    "clickhouse-connect>=0.8",

    # Queue / workers
    "arq>=0.26",

    # Channel 1 — mail
    "aioimaplib>=1.1",           # Tier 3 IMAP IDLE
    "imapclient>=3.0",           # Tier 3 polling
    "mail-parser>=4.1",
    "aiosmtpd>=1.4",             # Tier 4 forwarding ingest
    "msal>=1.31",                # Tier 1 Microsoft Graph
    "google-api-python-client>=2.150",
    "google-auth>=2.36",

    # Channel 2 — identity
    "pywebpush>=2.0",            # L1 push, self-hosted VAPID
    "user-agents>=2.2",

    # Channel 3 — external
    "dnspython>=2.7",
    "tldextract>=5.1",           # Public Suffix List — trial ledger + domain normalisation
    "python-whois>=0.9",         # RDAP fallback only
    "cryptography>=44.0",

    # Detection
    "confusable-homoglyphs>=3.3",  # A4
    "rapidfuzz>=3.10",             # A3 Damerau-Levenshtein
    "yara-python>=4.5",            # B-cascade layer 1
    "oletools>=0.60",              # macro extraction
    "pdfminer.six>=20240706",
    "pypdf>=5.1",
    "schwifty>=2024.11",           # IBAN validation — A1
    "python-stdnum>=1.20",         # SWIFT/BIC, sort codes — A1

    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/envelock"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
